--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,17 @@
-## Directory-based project format
+# Editor
 *.sublime*
+.vscode
 
 # OSX
 *.DS_Store
 
+# NPM
 node_modules
+npm-debug.log
 
-# Compiled JS
-bin
+# Build
+dist
+
+# Coverage
+coverage
+.nyc_output
