--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
       "git add"
     ]
   },
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/DylanPiercey/is-typeof"
